Refactor Problem & Practice discovery to support duplicates
- Updated ClassDiscoveryService to handle multiple problems/practices with the same name by grouping them in lists.
- Updated ProblemManager to initialize and run problems/practices correctly with duplicates.
- Updated ProblemRunner to display categories for duplicate problems/practices and allow user to select the correct one.
- Improved retry logic and menu selection to handle duplicate scenarios.
- Preserved single-responsibility: ProblemRunner handles UI, ProblemManager handles execution logic.
- Fixed previous issues with practice-to-problem mapping to ensure correct instantiation.